# blueborne-penetration-testing-tool

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindSQLite3.cmake
docker/ubuntu/: Dockerfile  sources.list
include/: logger.h
res/: mac-vendors-export.csv  ouilookup.db
src/: allowlist.txt  bluetooth.c  bluetooth.h  database.c  database.h  logger.c  main.c  utils.c  utils.h
tests/: CMakeLists.txt  check_bbptt  check_bbptt.c
tests/res/: allowlist-2.txt  allowlist.txt
